syntax = "proto3";

option csharp_namespace = "DLS.Factory.Protos";

package login;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

service LoginProto {
    rpc Login (UserObj) returns (UserObj);
    rpc CreateUser (CreateUserObj) returns (google.protobuf.BoolValue);
}

message UserObj {
  int64 id = 1;
  string username = 2;
  string password = 3;
  int64 schoolId = 4;
  google.protobuf.BoolValue isTeacher = 5;
}

message CreateUserObj {
  string username = 1;
  string password = 2;
  string name = 3;
  int32 age = 4;
  string gender = 5;
}

